syntax = "proto3";

message RpcMeta {
    RpcRequestMeta request = 1;
    RpcResponseMeta response = 2;
    uint64 correlation_id = 4;
}

message RpcRequestMeta {
    string service_name = 1;
    string method_name = 2;
    int64 log_id = 3;
}

message RpcResponseMeta {
    int32 error_code = 1;
    string error_text = 2;
}